--- a/SourceCode/2023/Oct2023/Basics/Sudheer Devabattula/Task001/Main.xaml
+++ b/SourceCode/2023/Oct2023/Basics/Sudheer Devabattula/Task001/Main.xaml
@@ -77,7 +77,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Sequence DisplayName="Sequence- Display Message" sap:VirtualizedContainerService.HintSize="449.6,479.20000000000005" sap2010:WorkflowViewState.IdRef="Sequence_2">
+    <Sequence DisplayName="Sequence- Display Message" sap:VirtualizedContainerService.HintSize="449.6,479.2" sap2010:WorkflowViewState.IdRef="Sequence_2">
       <Sequence.Variables>
         <Variable x:TypeArguments="x:String" Name="str_Name" />
       </Sequence.Variables>
@@ -91,7 +91,7 @@
           <OutArgument x:TypeArguments="x:String">[str_Name]</OutArgument>
         </ui:InputDialog.Result>
       </ui:InputDialog>
-      <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="387.2,85.6" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Hi &quot; +str_Name+  &quot; Welcome Uipath Basic Program&quot;]" />
+      <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box-output" sap:VirtualizedContainerService.HintSize="387.2,85.6" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Hi &quot; +str_Name+  &quot; Welcome Uipath Basic Program&quot;]" />
     </Sequence>
   </Sequence>
 </Activity>
