--- a/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 4/Main.xaml
+++ b/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 4/Main.xaml
@@ -115,7 +115,7 @@
             </Assign.Value>
           </Assign>
           <ui:LogMessage DisplayName="Result Message" sap:VirtualizedContainerService.HintSize="433.6,142.4" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[Boolean_variable.ToString + &quot; &quot; +   input_year.ToString + &quot; is a Leap year&quot;]" />
-          <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message" sap:VirtualizedContainerService.HintSize="433.6,85.6" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[Boolean_variable.ToString + &quot; &quot; + input_year.ToString + &quot;  is a Leap year&quot;]" />
+          <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="True Message" sap:VirtualizedContainerService.HintSize="433.6,85.6" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[Boolean_variable.ToString + &quot; &quot; + input_year.ToString + &quot;  is a Leap year&quot;]" />
         </Sequence>
       </If.Then>
       <If.Else>
@@ -133,7 +133,7 @@
               <InArgument x:TypeArguments="x:Boolean">False</InArgument>
             </Assign.Value>
           </Assign>
-          <ui:LogMessage DisplayName="Result Message" sap:VirtualizedContainerService.HintSize="433.6,142.4" sap2010:WorkflowViewState.IdRef="LogMessage_3" Message="[Boolean_variable.ToString + &quot; &quot; +   input_year.ToString + &quot; is not a Leap year&quot;]" />
+          <ui:LogMessage DisplayName="False Result Message" sap:VirtualizedContainerService.HintSize="433.6,142.4" sap2010:WorkflowViewState.IdRef="LogMessage_3" Message="[Boolean_variable.ToString + &quot; &quot; +   input_year.ToString + &quot; is not a Leap year&quot;]" />
           <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message" sap:VirtualizedContainerService.HintSize="433.6,85.6" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[Boolean_variable.ToString + &quot; &quot; +  input_year.ToString + &quot;  is not a Leap year&quot;]" />
         </Sequence>
       </If.Else>
